<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_employee"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:backgroundTint="@color/shimmer_effect"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_task_name"
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_name"/>

            <TextView
                android:id="@+id/tv_task_description"
                style="@style/body"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_description" />

            <TextView
                android:id="@+id/task_status"
                style="@style/body"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:background="@color/shimmer_effect" />

        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>