<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_employee"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="10dp"
    android:clickable="true"
    android:elevation="10dp"
    android:focusable="true"
    android:padding="15dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_employee"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/avatar6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_employee_name"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kust"
            app:layout_constraintBottom_toTopOf="@+id/tv_department"
            app:layout_constraintStart_toEndOf="@+id/img_employee"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_department"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            app:layout_constraintBottom_toTopOf="@+id/tv_status"
            app:layout_constraintStart_toEndOf="@+id/img_employee"
            app:layout_constraintTop_toBottomOf="@+id/tv_employee_name" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_employee"
            app:layout_constraintTop_toBottomOf="@+id/tv_department" />

        <ImageView
            android:id="@+id/img_attendance_status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_success" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>